test/errors/circular-dependencies-three/packages/library-tracking/src/library.module.ts
import { NgModule } from '@angular/core';

import { LibraryTrackingService } from '@library-cirulcar-dependencies-three/tracking/src/tracking/tracking.service';

/**
 * Tracking Module
 */
@NgModule( {
	providers: [
		LibraryTrackingService
	]
} )
export class LibraryTrackingModule {}
